message, document components

--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -4,7 +4,7 @@
     <img
       [src]="contact.imageUrl"
       [alt]="contact.name"
-      class="pull-left"
+      class="pull-left img-responsive"
       style="max-height: 50px; margin-left: 10px"
     />
 
