--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -13,6 +13,7 @@
       <app-contact-item
         *ngFor="let contact of contacts"
         [contact]="contact"
+        (click)="onSelected(contact)"
       ></app-contact-item>
     </div>
   </div>
