--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,6 +1,13 @@
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <app-contact-list></app-contact-list>
+    <app-contact-list
+      (selectedContactEvent)="selectedContact = $event"
+    ></app-contact-list>
   </div>
-  <div class="col-md-4"><app-contact-detail></app-contact-detail></div>
+  <div class="col-md-4">
+    <app-contact-detail
+      *ngIf="selectedContact"
+      [contact]="selectedContact"
+    ></app-contact-detail>
+  </div>
 </div>
