--- a/src/app/messages/message-list/message-list.component.html
+++ b/src/app/messages/message-list/message-list.component.html
@@ -9,12 +9,17 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-xs-12">
-            <app-message-item></app-message-item>
+            <app-message-item
+              *ngFor="let message of messages"
+              [message]="message"
+            ></app-message-item>
           </div>
         </div>
       </div>
       <div class="panel-footer">
-        <app-message-edit></app-message-edit>
+        <app-message-edit
+          (addMessageEvent)="onAddMessage($event)"
+        ></app-message-edit>
       </div>
     </div>
   </div>
