--- a/src/app/messages/message-edit/message-edit.component.html
+++ b/src/app/messages/message-edit/message-edit.component.html
@@ -10,6 +10,7 @@
             class="form-control"
             size="120"
             max="120"
+            #subject
           />
         </div>
 
@@ -21,13 +22,22 @@
             class="form-control"
             max="255"
             size="120"
+            #msgText
           />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Send</button>
-          <button class="btn btn-danger" type="button">Clear</button>
+          <button
+            class="btn btn-success"
+            type="button"
+            (click)="onSendMessage()"
+          >
+            Send
+          </button>
+          <button class="btn btn-danger" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
