--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,1 +1,4 @@
-<p>document-item works!</p>
+<a class="list-group-item clearfix documentDiv">
+  <!-- Display document name here -->
+  <h4 class="list-group-item-heading">{{ document.name }}</h4>
+</a>
