--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,22 +5,23 @@
     </div>
 
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <div class="nav navbar-nav">
         <li><a href="" (click)="onSelected('documents')">Documents</a></li>
         <li><a href="#" (click)="onSelected('messages')">Messages</a></li>
         <li><a href="#" (click)="onSelected('contacts')">Contacts</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+      </div>
+
+      <div class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">
-            User <span class="caret"></span
-          ></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            User <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
             <li><a href="#">Edit</a></li>
             <li><a href="#">Delete</a></li>
           </ul>
         </li>
-      </ul>
+      </div>
     </div>
   </div>
 </nav>
