--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,8 @@
       </div>
 
       <div class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        <li class="dropdown" appDropdown>
+          <a href="#" class="dropdown-toggle">
             User <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
