routerLink for addDocument

--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -4,9 +4,6 @@
   </div>
 
   <div class="col-md-4">
-    <app-document-detail
-      *ngIf="selectedDocument"
-      [document]="selectedDocument"
-    ></app-document-detail>
+    <router-outlet></router-outlet>
   </div>
 </div>
