--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -1,4 +1,10 @@
-<a href="#" class="list-group-item clearfix">
+<a
+  href="#"
+  class="list-group-item clearfix"
+  [routerLink]="[contact.id]"
+  routerLinkActive="active"
+  [routerLinkActiveOptions]="{ exact: true }"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ contact.name }}</h4>
   </div>
