--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,9 @@
-<a class="list-group-item clearfix documentDiv">
+<a
+  class="list-group-item clearfix documentDiv"
+  [routerLink]="[document.id]"
+  routerLinkActive="active"
+  [routerLinkActiveOptions]="{ exact: true }"
+>
   <!-- Display document name here -->
   <h4 class="list-group-item-heading">{{ document.name }}</h4>
 </a>
