--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,17 +5,17 @@
     </div>
 
     <div class="collapse navbar-collapse">
-      <div class="navbar-nav">
+      <ul class="nav navbar-nav navbar-center">
         <li routerLinkActive="active">
-          <a class="nav-link" routerLink="/documents">Documents</a>
+          <a routerLink="/documents">Documents</a>
         </li>
         <li routerLinkActive="active">
-          <a class="nav-link" routerLink="/messages">Messages</a>
+          <a routerLink="/messages">Messages</a>
         </li>
         <li routerLinkActive="active">
-          <a class="nav-link" routerLink="/contacts">Contacts</a>
+          <a routerLink="/contacts">Contacts</a>
         </li>
-      </div>
+      </ul>
     </div>
   </div>
 </nav>
