--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -17,5 +17,12 @@
   <div class="panel-body">
     <p><strong>Email:</strong> {{ contact?.email }}</p>
     <p><strong>Phone:</strong> {{ contact?.phone }}</p>
+    <p><strong> Contacts in Team:</strong></p>
+    <div>
+      <app-contact-item
+        *ngFor="let contact of contact?.group"
+        [contact]="contact"
+      ></app-contact-item>
+    </div>
   </div>
 </div>
