--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,1 +1,147 @@
-<p>contact-edit works!</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            id="name"
+            class="form-control required"
+            size="120"
+            max="120"
+            name="name"
+            [ngModel]="contact.name"
+            #name="ngModel"
+            required
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="email">Email:</label>
+          <input
+            type="text"
+            id="email"
+            class="form-control required"
+            size="120"
+            max="255"
+            name="email"
+            [ngModel]="contact.email"
+            #email="ngModel"
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+          />
+          <div
+            *ngIf="email.invalid && email.touched"
+            class="alert alert-danger"
+          >
+            Enter a valid Email address
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="phone">Phone:</label>
+          <input
+            type="text"
+            id="phone"
+            class="form-control invalid"
+            size="150"
+            max="255"
+            name="phone"
+            [ngModel]="contact.phone"
+            #phone="ngModel"
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
+          />
+          <!-- Error message -->
+          <div
+            *ngIf="phone.invalid && phone.touched"
+            class="alert alert-danger"
+          >
+            Enter a valid phone number
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="imageUrl">Image URL:</label>
+          <input
+            type="text"
+            id="imageUrl"
+            class="form-control"
+            size="150"
+            max="255"
+            name="imageUrl"
+            [ngModel]="contact.imageUrl"
+            #imageUrl="ngModel"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="form-group">
+          <label for="groupList">Group Contacts:</label>
+          <div class="alert alert-danger" *ngIf="dropError">
+            {{ dropError }}
+          </div>
+
+          <div
+            class="row group-dropzone"
+            id="groupList"
+            style="min-height: 3rem"
+            cdkDropList
+            #groupList="cdkDropList"
+            [cdkDropListData]="groupContacts"
+            [cdkDropListConnectedTo]="['allContactsList']"
+            (cdkDropListDropped)="onDrop($event)"
+          >
+            <div
+              *ngFor="let contact of groupContacts; let i = index"
+              cdkDrag
+              class="col-sm-12 group-item"
+            >
+              <div>
+                <app-contact-item
+                  class="col-sm-11"
+                  [contact]="contact"
+                ></app-contact-item>
+                <button
+                  class="btn btn-danger col-sm-2 deleteButton"
+                  (click)="onRemoveItem(i)"
+                >
+                  X
+                </button>
+              </div>
+            </div>
+            <span class="dragMsg" *ngIf="groupContacts.length < 1">
+              Drag contacts in group here
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            (!name.valid || !email.valid) && (name.touched || email.touched)
+          "
+        >
+          The Name and Email fields are required.
+        </div>
+        <div class="col-xs-12 btn-toolbar">
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">
+            Save
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
